# qt-homework-2

Task 1/Homework2Task1/: CMakeLists.txt  main.cpp
